# meegsim-tutorial-2025

./: .pre-commit-config.yaml  README.md  demo.ipynb  pyproject.toml  requirements.txt  requirements_jupyter.txt
.github/workflows/: test_install.yml
00_test_install/: test_install.ipynb  test_install.py
01_demo/: demo.ipynb  demo.py
02_hands_on/patch_cancellation/: patch_cancellation.ipynb  patch_cancellation.py
_solutions/00_test_install/: test_install.py
_solutions/01_demo/: demo.ipynb  demo.py
_solutions/02_hands_on/: patch_cancellation.ipynb  patch_cancellation.py
src/meegsim_tutorial/: ext.py  utils.py  viz.py
