[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meegsim_tutorial"
version = "1.0dev"
authors = [
  { name="Nikolai Kapralov", email="kapralov@cbs.mpg.de" },
  { name="Alina Studenova" },
]
description = "Tutorial on how to use MEEGsim for simulating M/EEG data"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "emoji",
  "mne[full]>=1.9.0",
  "meegsim==0.0.2"
]

[project.optional-dependencies]
dev = [
  "pre-commit",
  "ruff"
]

[tool.hatch.build.targets.wheel]
packages = ["src/meegsim_tutorial"]
